fixed incorrect spacing
product list

--- a/assets/projects/veidec/static/styles/components/global/recommended-product-section.scss
+++ b/assets/projects/veidec/static/styles/components/global/recommended-product-section.scss
@@ -8,8 +8,9 @@
 		text-align:center;
 		background-color:$silverLight;
 		margin:0px 16px;
-		h3{
+		h3:nth-child(1){
 			padding: 20px 0 100px 0;
+			
 		}
 		.text{
 			padding:5px 8px;
